--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,25 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            >
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/FeedActivityThemeLight"
+    >
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        <activity
+                android:name=".SplashActivity"
+                android:screenOrientation="portrait"
+                android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
+
+        </activity>
+
     </application>
 
 </manifest>
