--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,7 @@
         </activity>
 
         <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait"
-
-        >
+                  android:screenOrientation="portrait">
 
         </activity>
 
