--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,13 @@ android {
         applicationId "nz.calculatorpp.android.bigbuttoncalculator"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.1.2"
+        versionCode 6
+        versionName "1.1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
