- fix for crash - release candidate 1.1.6 - increased in size the layout selector in height

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,16 @@ android {
         applicationId "nz.calculatorpp.android.bigbuttoncalculator"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 7
-        versionName "1.1.5"
+        versionCode 8
+        versionName "1.1.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
