--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="nz.calculatorpp.android.bigbuttoncalculator">
+          package="nz.calculatorpp.android.popcorn">
 
     <application
             android:allowBackup="true"
@@ -13,7 +13,7 @@
     >
 
         <activity
-                android:name="MainActivity"
+                android:name="nz.calculatorpp.android.popcorn.MainActivity"
                 android:screenOrientation="portrait"
                 android:label="@string/app_name" >
             <intent-filter>
