--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "nz.calculatorpp.android.bigbuttoncalculator"
+        applicationId "nz.calculatorpp.android.popcorn"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 8
-        versionName "1.1.6"
+        versionCode 9
+        versionName "1.1.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,19 +34,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.google.dagger:dagger-android:2.20'
-    implementation 'com.google.dagger:dagger-android-support:2.20'
+    implementation 'com.google.dagger:dagger-android:2.33'
+    implementation 'com.google.dagger:dagger-android-support:2.33'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-    implementation 'com.google.dagger:dagger:2.27'
-    implementation 'com.google.dagger:dagger-android-support:2.20'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.dagger:dagger:2.33'
+    implementation 'com.google.dagger:dagger-android-support:2.33'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.33'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-common-ktx:1.0.0'
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     implementation("com.google.guava:guava:28.1-android")
