--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="nz.calculatorpp.android.popcorn">
+          package="nz.calculatorpp.android.bigbuttoncalculator">
 
     <application
             android:allowBackup="true"
@@ -10,10 +10,11 @@
             android:supportsRtl="true"
             android:screenOrientation="portrait"
             android:theme="@style/FeedActivityThemeLight"
+            android:fullBackupContent="true"
     >
 
         <activity
-                android:name="nz.calculatorpp.android.popcorn.MainActivity"
+                android:name="nz.calculatorpp.android.bigbuttoncalculator.MainActivity"
                 android:screenOrientation="portrait"
                 android:label="@string/app_name" >
             <intent-filter>
